--- a/benchmark/list/test2.in
+++ b/benchmark/list/test2.in
@@ -1,8 +1,9 @@
 %HES
-Sentry =m ∃ls. (G ls A).
-A n =m false.
-G ls k =v ∃hd.∃tl. (ls =l [] /\ k 0) \/
-(ls =l (hd :: tl) /\
-  ((hd = 0 /\ G tl A) \/
-  (hd = 1 /\ G (0 :: tl) A))
+Sentry =v ∀ls. (G ls A).
+A n =v true.
+G ls k =m ∀hd.∀tl. (ls <>l [] \/ k 0) /\
+(ls <>l (hd :: tl) \/
+  ((hd <> 0 \/ G tl A) /\
+   (hd <> 1 \/ G (0 :: tl) A)
+  )
 ).
