--- a/benchmark/productive/valid/fibstream.in
+++ b/benchmark/productive/valid/fibstream.in
@@ -1,5 +1,5 @@
 %HES
-Sentry =v ∀ls. \/ Fib ls A.
+Sentry =v ∀ls. Fib ls A.
 A n =v true.
 Fib ls k =m (ls <>l [] \/ k 0) /\ (ls <>l (0 ::[]) \/ k 1) /\
   (head (tail ls) <> 0 \/ Add Fib (\ls. Fib (0 :: ls)) (tail ls) k).
