--- a/benchmark/productive/valid/zeroonetree.in
+++ b/benchmark/productive/valid/zeroonetree.in
@@ -3,10 +3,12 @@ S =v ∀ls. G ls A.
 A n =v true.
 G ls k =m (ls <>l [] \/ k 0) /\
 (ls =l [] \/
-  ((head ls) <> 0 \/ G (tail ls) A) /\
-  ((head ls) <> 1 \/
-      ((tail ls) <>l [] \/ k 1) /\
+  (head ls <> 0 \/ G (tail ls) A) /\
+  (head ls <> 1 \/
+      (tail ls <>l [] \/ k 1) /\
+      (tail ls =l [] \/
       ((head (tail ls)) <> 0 \/ G (tail (tail ls)) A) /\
       ((head (tail ls)) <> 1 \/ G (tail (tail ls)) A)
+      )
   )
 ).
